--- a/stories/tunnel/04-descriptive/orphanage.yaml
+++ b/stories/tunnel/04-descriptive/orphanage.yaml
@@ -73,6 +73,7 @@ foyer:
       text: Snoop around the orphanage admin area
       require: 50 skill_sneak
 common:
+  _image: commons.png
   _content:
     - choice: foyer
       text: Go to the foyer
@@ -82,6 +83,7 @@ common:
       text: Go to the courtyard
       require: 1 key_courtyard
   study:
+    _image: orphanage_study.png
     _content:
       - storypoint: visited_orphanage_study
       - tag: mabel
@@ -190,24 +192,21 @@ rooms:
           - goto: .
       - if: time - last_time_made_bed > 0
         then:
-          - choice: make_bed
+          - choice: make
             text: Make your bed
             effects:
               - You make your bed.
               - set: last_time_made_bed = time
               - separator:
               - goto: .
-      - choice: sleep
-        text: Sleep the day away
-        effects:
-          - if: slept_recently
-            then:
-              - You already slept recently, silly!
-              - separator:
-              - goto: .
-            else:
+      - if: energy < max_energy
+        then:
+          - choice: sleep
+            text: Sleep the day away (you might forget some things)
+            cost: (ceil(experience / 10)) experience
+            shown: (max_energy - energy) energy
+            effects:
               - sub: /logic/time
-              - flag: slept_recently
               - You sleep the day away.
               - separator:
               - goto: .
